# notebooks-resource-warning

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  check-release.yml  lint.yml
resource_warning/: __init__.py
src/: index.ts  model.ts
